--- a/pom.xml
+++ b/pom.xml
@@ -278,6 +278,14 @@
             <artifactId>spring-messaging</artifactId>
             <version>${org.springframework-version}</version>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.jsoup/jsoup -->
+        <dependency>
+            <groupId>org.jsoup</groupId>
+            <artifactId>jsoup</artifactId>
+            <version>1.15.3</version>
+        </dependency>
+
     </dependencies>
 
     <!--Amazon CDN Maven-->
