board detail ing

--- a/src/main/java/com/resources/config.properties
+++ b/src/main/java/com/resources/config.properties
@@ -46,5 +46,7 @@ BUSINESS.REGISTRATION.URL=https://api.odcloud.kr/api/nts-businessman/v1/status
 RECOVER.URLS=/test/login,/test/download
 
 ##DEFAULT_IMAGE
-DEFAULT.PROFILE.IMAGE.URL=/resources/assets/images/sample/profile-sample.svg
-DEFAULT.PROFILE.IMAGE.NAME=profile-sample.svg
+DEFAULT.PROFILE.IMAGE.URL=/resources/assets/images/sample/sample_profile_1.png
+DEFAULT.PROFILE.IMAGE.NAME=sample_profile_1.png
+DEFAULT.PROFILE.IMAGE.SIZE=0
+DEFAULT.PROFILE.IMAGE.TYPE=image/png
